--- a/package.json
+++ b/package.json
@@ -1,1 +1,41 @@
+{
+  "name": "mindmap-bot",
+  "version": "1.0.0",
+  "description": "Приложение для создания и управления интеллект-картами",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "npm run dev",
+    "dev": "webpack serve --mode development",
+    "build": "webpack --mode production",
+    "test": "echo \"Tests not implemented\""
+  },
+  "keywords": [
+    "mindmap",
+    "web",
+    "application",
+    "javascript"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-serve": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
+    "babel-loader": "^8.2.3",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not ie <= 11"
+  ]
+}
 
